--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -15,7 +15,7 @@ body {
   font-size: var(--fonts_size);
   line-height: 1.5;
   margin: 0;
-  overflow-x: hidden; // avoid overflowing the website
+  // overflow-x: hidden; // avoid overflowing the website
   background-color: $grey;
 }
 
