--- a/scss/variables/_column_width.scss
+++ b/scss/variables/_column_width.scss
@@ -1,4 +1,4 @@
-$breakpoint-desktop: 1440px;
+$breakpoint-desktop: 1240px;
 $breakpoint-tablet: 765px;
 $masthead_width: 585px;
 $element-child-section-medium: 450px;
